Add a per-user theme switcher. The CSS might be slightly broken in the themes, that'll be fixed in a follow-up commit. Added basic support for server sync.
Re-added a few missing defers.
Renamed TO-DO to TODO across the entire codebase.
Renamed StaticForumStore to MemoryForumStore.
The ForumStore is now built on a sync.Map with a view slice for generating /forums rather than a slice.
Renamed many more functions and variables to satisfy the linter.
increase_post_user_stats() and decrease_post_user_stats() are now methods on the User struct. We also fix a bug where they take the moderator's score rather than the target user's into account when recalculating their level after a post / topic is deleted.
Transitioned the topic list to CSS Grid for Tempra Simple, with a float fallback.
Cosmo and Cosmo Conflux are now hidden from the theme list.
Fixed more data races.
Added more debug data to the template compiler logs.

--- a/templates/account-own-edit-email.html
+++ b/templates/account-own-edit-email.html
@@ -5,7 +5,7 @@
 		<div class="rowitem"><h1>Emails</h1></div>
 	</div>
 	<div class="colstack_item">
-		<!-- TO-DO: Do we need this inline CSS? -->
+		<!-- TODO: Do we need this inline CSS? -->
 		{{range .ItemList}}
 		<div class="rowitem" style="font-weight: normal;">
 			<a style="text-transform: none;">{{.Email}}</a>
