--- a/templates/panel-forums.html
+++ b/templates/panel-forums.html
@@ -24,7 +24,7 @@
 			</span>
 			</span>
 			<span style="float: left;">
-				{{/** TO-DO: Make sure the forum_active_name class is set and unset when the activity status of this forum is changed **/}}
+				{{/** TODO: Make sure the forum_active_name class is set and unset when the activity status of this forum is changed **/}}
 				<a data-field="forum_name" data-type="text" class="editable_block forum_name{{if not .Active}} forum_active_name{{end}}">{{.Name}}</a>
 			</span>
 			<br /><span data-field="forum_desc" data-type="text" class="editable_block forum_desc rowsmall">{{.Desc}}</span>
