--- a/templates/socialgroups_view_group.html
+++ b/templates/socialgroups_view_group.html
@@ -1,8 +1,8 @@
 {{template "header.html" . }}
-{{/** TO-DO: Move this into a CSS file **/}}
+{{/** TODO: Move this into a CSS file **/}}
 {{template "socialgroups_css.html" . }}
 
-{{/** TO-DO: Port the page template functions to the template interpreter **/}}
+{{/** TODO: Port the page template functions to the template interpreter **/}}
 {{if gt .Page 1}}<div id="prevFloat" class="prev_button"><a class="prev_link" href="/group/{{.SocialGroup.ID}}?page={{subtract .Page 1}}">&lt;</a></div>{{end}}
 {{if ne .LastPage .Page}}<link rel="prerender" href="/group/{{.SocialGroup.ID}}?page={{add .Page 1}}" />
 <div id="nextFloat" class="next_button"><a class="next_link" href="/group/{{.SocialGroup.ID}}?page={{add .Page 1}}">&gt;</a></div>{{end}}
