Revamped Tempra Conflux.
Updated the readme.
Added more comments.
The forumView cache for MemoryForumStore now excludes Social Groups.
Moved the word filter logic into it's own file.
You can now change the language via the configuration file.
Moved the inline CSS into the CSS files.

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 <div class="footer">
-	<div id="poweredBy" style="float: left;margin-top: 4px;">Powered by Gosora - <span style="font-size: 12px;">Made with love by Azareal</span></div>
+	<div id="poweredBy">Powered by Gosora - <span>Made with love by Azareal</span></div>
 	<form action="/theme/" method="post">
 		<div id="themeSelector" style="float: right;">
 			<select id="themeSelectorSelect" name="themeSelector" aria-label="Change the site's appearance">
